fixed table selection not showing and cursor up after new paragraph

--- a/public/styles.css
+++ b/public/styles.css
@@ -154,6 +154,10 @@ left: -3000px;
 	background: rgb(179,216,253);
 }
 
+td.selected, th.selected {
+	background: rgb(179,216,253);
+}
+
 span {
 	padding-bottom: 5px;
 	padding-top: 3px;
